GoodTIme_Intelij/src/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Displays_In_Case__c</fullName>
        <description>Number of Displays in a case</description>
        <label>Displays_In_Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Visit_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SFINV-{00000}</displayFormat>
        <label>Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>You_can_create_inventory_only_for_today</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Visit_Date__c &lt; Today(), ISNEW(), $User.ProfileId != &apos;00ef4000000ELT6&apos;),AND(ISCHANGED(Visit_Date__c),$User.ProfileId != &apos;00ef4000000ELT6&apos;))</errorConditionFormula>
        <errorMessage>You can&apos;t create inventory for past</errorMessage>
    </validationRules>
</CustomObject>